--- a/package.json
+++ b/package.json
@@ -45,5 +45,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://paychat-api.onrender.com/api"
+  "proxy": "http://localhost:8800/api"
 }
