added network loader icon

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_PUBLIC_FOLDER = https://paychat-api.onrender.com/images/
-REACT_APP_API_URL = https://paychat-api.onrender.com/api
+REACT_APP_PUBLIC_FOLDER = http://localhost:8800/images/
+REACT_APP_API_URL = http://localhost:8800/api
